<resources>
    <string name="app_name">ToDoリスト付きカレンダー</string>
    <string name="tab_text_1">カレンダー</string>
    <string name="tab_text_2">ToDoリスト</string>
    <string name="tab_text_3">設定</string>
    <string name="prev_month">&lt;&lt;</string>
    <string name="next_month">&gt;&gt;</string>
    <string name="sunday">日</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <string name="finish">完了</string>
    <string name="edit">編集</string>
    <string name="delete">削除</string>
    <string name="todo_title">ToDo名</string>
    <string name="todo_header">項目名</string>
    <string name="deadline">締切日</string>
    <string name="memo">メモ</string>
    <string name="cancel">キャンセル</string>
    <string name="add">追加</string>
    <string name="notification_setting">通知設定</string>
    <string name="day_before_2">2日前</string>
    <string name="day_before_1">1日前</string>
    <string name="hour_before_3">3時間前</string>
    <string name="hour_before_1">1時間前</string>
    <string name="just_before">締切時間</string>
</resources>