<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorYellow">

    <ListView
        android:id="@+id/toDoLV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="5dp"
        android:background="@color/colorWhite"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/finBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finish"
            android:enabled="false"/>

        <Button
            android:id="@+id/editBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit"
            android:enabled="false"/>

        <Button
            android:id="@+id/delBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:enabled="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo_title"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/titleTV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:textSize="20dp"
                android:background="@color/colorWhite"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deadline"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/deadLineTV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:textSize="20dp"
                android:background="@color/colorWhite"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/memo"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/memoTV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="5dp"
            android:textSize="20dp"
            android:background="@color/colorWhite"/>

    </LinearLayout>

</LinearLayout>