<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_title"
        android:gravity="center"/>

    <EditText
        android:id="@+id/toDoTitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:background="@color/colorWhite"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_header"
        android:gravity="center"/>

    <EditText
        android:id="@+id/toDoHeaderTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:background="@color/colorWhite"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deadline"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dateBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textSize="25dp"
            android:text="2020/11/20"
            android:onClick="showDatePickerDialog"/>

        <Button
            android:id="@+id/timeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textSize="25dp"
            android:text="13:50"
            android:onClick="showTimePickerDialog"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memo"/>

    <EditText
        android:id="@+id/toDoMemoTV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:background="@color/colorWhite"
        android:textSize="25dp"/>

</LinearLayout>