<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:paddingTop="5dp"
        android:textColor="@color/colorBlack"
        android:text="@string/notification_setting"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="1dp"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="10dp"
            android:textSize="18dp"
            android:text="@string/day_before_2"/>

        <Switch
            android:id="@+id/day2swtch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="1dp"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="10dp"
            android:textSize="18dp"
            android:text="@string/day_before_1"/>

        <Switch
            android:id="@+id/day1switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="1dp"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="10dp"
            android:textSize="18dp"
            android:text="@string/hour_before_3"/>

        <Switch
            android:id="@+id/hour3swtch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="1dp"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="10dp"
            android:textSize="18dp"
            android:text="@string/hour_before_1"/>

        <Switch
            android:id="@+id/hour1switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="1dp"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="10dp"
            android:textSize="18dp"
            android:text="@string/just_before"/>

        <Switch
            android:id="@+id/justSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <Button
        android:id="@+id/notificationBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="テスト通知"/>

</LinearLayout>